<resources>
    <string name="app_name">PocketChange</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_budget">Budget</string>
    <string name="title_profile">Profile</string>
    <string name="title_expenses">Expenses</string>
    <string name="profile_picture">Profile picture</string>
    <string name="expense_image">Expense image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sort_options">
        <item>Date ↓</item>
        <item>Date ↑</item>
        <item>Amount ↓</item>
        <item>Amount ↑</item>
    </string-array>


</resources>