<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="vcmsa.projects.pcv1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="vcmsa.projects.pcv1.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_categoryFragment_to_categoryExpensesFragment"
            app:destination="@id/categoryExpensesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            >
            <argument
                android:name="categoryId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/categoryExpensesFragment"
        android:name="vcmsa.projects.pcv1.ui.category.CategoryExpensesFragment"
        android:label="Category Expenses"
        tools:layout="@layout/fragment_category_expenses">

        <action
            android:id="@+id/action_categoryExpensesFragment_to_expenseDetailFragment"
            app:destination="@id/expenseDetailFragment"/>
        <argument
            android:name="categoryId"
            app:argType="integer" />
    </fragment>


    <fragment
        android:id="@+id/navigation_budget"
        android:name="vcmsa.projects.pcv1.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="vcmsa.projects.pcv1.ui.expenses.ExpensesFragment"
        android:label="@string/title_expenses"
        tools:layout="@layout/fragment_expenses">
    <action
        android:id="@+id/action_expensesFragment_to_expenseDetailFragment"
        app:destination="@id/expenseDetailFragment"/>
    </fragment>

    <fragment
        android:id="@+id/expenseDetailFragment"
        android:name="vcmsa.projects.pcv1.ui.expenses.ExpenseDetailFragment"
        android:label="Expense Details">
        <argument
            android:name="expenseId"
            app:argType="integer" />
    </fragment>


    <fragment
        android:id="@+id/addExpenseFragment"
        android:name="vcmsa.projects.pcv1.ui.expenses.AddExpenseFragment"
        android:label="Add Expense" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="vcmsa.projects.pcv1.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>